# fastapi-jan-2025

./: .gitignore  README.md
code_example/: README.md  database.py  main.py  models.py  pyproject.toml
code_example/tests/: test_main.py
slides/: fastapi_presentation.md
